refactor: rename Impact Reports to Impact and rewrite as prose

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -16,7 +16,7 @@ allocation, and grantee growth—before providing an outlook for the year ahead.
 
 - [Announcements](#announcements)
 - [Donations](#donations)
-- [Impact Reports](#impact-reports)
+- [Impact](#impact)
 - [Allocation](#allocation)
 - [Grantees](#grantees)
 - [Outlook](#outlook)
@@ -150,22 +150,21 @@ reach developers directly.
 
 ---
 
-## Impact Reports
+## Impact
 
-In 2025, we published our first comprehensive impact reports, highlighting the
-work of our grantees across seven key areas:
+This year we published our first impact reports, documenting what our grantees
+have built and shipped. The reports cover [on-chain
+privacy](/blog/developing-advancements-in-onchain-privacy), [Lightning
+infrastructure](/blog/advancements-in-lightning-infrastructure), [developer
+training](/blog/advancements-in-developer-training), [developer
+libraries](/blog/advancements-in-developer-libraries),
+[ecash](/blog/advancements-in-ecash), [Bitcoin and Lightning
+wallets](/blog/advancements-in-bitcoin-and-lightning-wallets), and [nostr
+clients](/blog/advancements-in-nostr-clients).
 
-- [On-chain privacy](/blog/developing-advancements-in-onchain-privacy)
-- [Lightning infrastructure](/blog/advancements-in-lightning-infrastructure)
-- [Developer training](/blog/advancements-in-developer-training)
-- [Developer libraries](/blog/advancements-in-developer-libraries)
-- [Ecash](/blog/advancements-in-ecash)
-- [Bitcoin and Lightning wallets](/blog/advancements-in-bitcoin-and-lightning-wallets)
-- [Nostr clients](/blog/advancements-in-nostr-clients)
-
-These reports demonstrate the tangible progress our grants enable—from Payjoin
-V2 going live in Bull Bitcoin and Cake Wallet, to the maturation of Cashu mobile
-bindings, to major client improvements across Amethyst, Damus, and Coracle.
+Highlights include Payjoin V2 shipping in Bull Bitcoin and Cake Wallet, Cashu
+mobile bindings reaching maturity, and major improvements across Amethyst,
+Damus, and Coracle. We encourage you to read the reports in full.
 
 ---
 
