chore: shorten wallets link text

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -158,8 +158,7 @@ privacy](/blog/developing-advancements-in-onchain-privacy), [Lightning
 infrastructure](/blog/advancements-in-lightning-infrastructure), [developer
 training](/blog/advancements-in-developer-training), [developer
 libraries](/blog/advancements-in-developer-libraries),
-[ecash](/blog/advancements-in-ecash), [Bitcoin and Lightning
-wallets](/blog/advancements-in-bitcoin-and-lightning-wallets), and [nostr
+[ecash](/blog/advancements-in-ecash), [wallets](/blog/advancements-in-bitcoin-and-lightning-wallets), and [nostr
 clients](/blog/advancements-in-nostr-clients).
 
 Highlights include Payjoin V2 shipping in Bull Bitcoin and Cake Wallet, Cashu
