feat: add reference to grantee map

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -319,7 +319,8 @@ nostr, education, and ecosystem-building initiatives.
 As of December 2025, we are sending approximately \$1.2M worth of bitcoin to
 our grantees each month. Thanks to bitcoin and Lightning, we can do this with
 minimal overhead and near-instant settlement—regardless of where our grantees
-are located.
+are located. Our grantees span over 40 countries; you can explore the full
+breakdown on our [map](/map).
 
 We continue to prioritize long-term relationships with grantees whose work
 aligns with [our mission](/mission). Many of this year's grants were renewals
