--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -321,6 +321,8 @@ our grantees each month. Thanks to bitcoin and Lightning, we can do this with
 minimal overhead and near-instant settlement—regardless of where our grantees
 are located. Our grantees span over 40 countries:
 
+<StatsSentence className="text-xl leading-8 text-gray-500 dark:text-gray-400" />
+
 <GranteeMap />
 
 We continue to prioritize long-term relationships with grantees whose work
