feat: add monthly grant payouts graphic to Grantees section

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -319,7 +319,11 @@ nostr, education, and ecosystem-building initiatives.
 As of December 2025, we are sending approximately \$1.2M worth of bitcoin to
 our grantees each month. Thanks to bitcoin and Lightning, we can do this with
 minimal overhead and near-instant settlement—regardless of where our grantees
-are located. Our grantees span over 40 countries:
+are located.
+
+![](/static/monthly-grant-payouts.svg)
+
+Our grantees span over 40 countries:
 
 <GranteeMap />
 
