--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -35,6 +35,11 @@ at [selecting projects](/selection) with each passing year. The growth detailed
 in this report reflects the dedication of our grantees, the generosity of our
 donors, and the tireless efforts of our volunteers and team.
 
+Every month in 2025, we sent roughly \$1 million worth of bitcoin to developers
+in 40+ countries. Every single month, without fail.
+
+![](/static/monthly-grant-payouts.svg)
+
 ---
 
 ## Announcements
@@ -319,11 +324,7 @@ nostr, education, and ecosystem-building initiatives.
 As of December 2025, we are sending approximately \$1.2M worth of bitcoin to
 our grantees each month. Thanks to bitcoin and Lightning, we can do this with
 minimal overhead and near-instant settlement—regardless of where our grantees
-are located.
-
-![](/static/monthly-grant-payouts.svg)
-
-Our grantees span over 40 countries:
+are located. Our grantees span over 40 countries:
 
 <GranteeMap />
 
