style: rewrite intro paragraph to sound less like AI

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -35,10 +35,9 @@ at [selecting projects](/selection) with each passing year. The growth detailed
 in this report reflects the dedication of our grantees, the generosity of our
 donors, and the tireless efforts of our volunteers and team.
 
-What we do is simple: we accept donations in both fiat and bitcoin, and we use
-these funds to provide stable, sustainable funding to open-source developers.
-Every month in 2025, we sent roughly \$1 million worth of bitcoin to developers
-in 40+ countries. Every single month, without fail.
+Donors send us fiat or bitcoin. We send bitcoin to grantees. Every month in
+2025, we sent roughly \$1 million to developers in 40+ countries. Every single
+month, without fail.
 
 ![](/static/monthly-grant-payouts.svg)
 
