--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -35,9 +35,9 @@ at [selecting projects](/selection) with each passing year. The growth detailed
 in this report reflects the dedication of our grantees, the generosity of our
 donors, and the tireless efforts of our volunteers and team.
 
-Donors send us fiat or bitcoin. We send bitcoin to grantees. Every month in
-2025, we sent roughly \$1 million to developers in 40+ countries. Every single
-month, without fail.
+Donors send us fiat or bitcoin. We hold virtually all of it in bitcoin and pay
+out in bitcoin exclusively. Every month in 2025, we sent roughly \$1 million to
+developers in 40+ countries. Every single month, without fail.
 
 ![](/static/monthly-grant-payouts.svg)
 
