style: remove AI-typical patterns and fix inconsistencies

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -31,9 +31,8 @@ single individual controls funding decisions.
 
 We continue to learn and improve. Some grants will produce outsized returns;
 others won't pan out as hoped. We accept this reality and strive to get better
-at [selecting projects](/selection) with each passing year. The growth detailed
-in this report reflects the dedication of our grantees, the generosity of our
-donors, and the tireless efforts of our volunteers and team.
+at [selecting projects](/selection) with each passing year. The growth detailed in this report is thanks to our grantees, our donors, and
+the people who keep OpenSats running.
 
 Donors send us fiat or bitcoin. We hold virtually all of it in bitcoin and pay
 out in bitcoin exclusively. Every month in 2025, we sent roughly \$1 million to
@@ -113,8 +112,7 @@ donation](/donate).
 
 ## Donations
 
-In 2025 we received significant support from both individual donors and
-organizations committed to funding open-source development.
+2025 was a good year for donations. Individuals and organizations both showed up.
 
 The [Human Rights Foundation](/blog/additional-ops-budget-from-hrf) contributed
 \$250,000 to our Operations Budget, allowing us to maintain the organizational
@@ -126,16 +124,13 @@ General Fund.
 In October, [Tether](/blog/opensats-receives-dollar250k-donation-from-tether)
 donated \$250,000, and [StarkWare together with the Starknet
 Foundation](/blog/opensats-receives-dollar400k-donation-from-starkware-starknet)
-contributed \$400,000—both directed to our General Fund. These donations
-reflect a growing recognition that Bitcoin's open-source foundation requires
-sustained investment.
+contributed \$400,000—both directed to our General Fund. Bitcoin's open-source foundation needs sustained investment, and these donors
+stepped up.
 
 We also received our first bitcoin-denominated recurring commitment when [Steak
 'n Shake](/blog/opensats-receives-donation-commitment-from-steak-n-shake)
 announced they would donate 210 sats from every Bitcoin Meal sold over the
-next twelve months. This model—where companies direct a portion of
-bitcoin-related revenue to open-source funding—represents a pattern we hope
-others will follow.
+next twelve months. We hope other companies follow their lead.
 
 In terms of individual donations, bitcoin payment rails continue to dominate.
 The ratio of Lightning to on-chain payments remained steady at approximately
@@ -145,10 +140,9 @@ Fund](/funds/nostr) and our [Operations Budget](/funds/ops).
 
 ![](/static/images/blog/2024-eoy/donations.png)
 
-We remain committed to our model: 100% of donations to our General Fund and The
-Nostr Fund go directly to grantees. Our operations are funded separately,
-allowing donors to support projects with confidence that their contributions
-reach developers directly.
+100% of donations to our General Fund and The Nostr Fund go directly to
+grantees. Our operations are funded separately. When you donate, your money
+reaches developers.
 
 <center>
   <DonateRecurringButton />
@@ -182,8 +176,6 @@ specifically on the nostr ecosystem.
 
 As of December 2025, we have allocated over \$18M in grants from the General
 Fund and over \$11M from The Nostr Fund across the lifetime of both programs.
-Year-over-year, this represents continued growth in our grant-giving capacity
-and reach.
 
 ![](/static/images/blog/2024-eoy/allocation.png)
 
@@ -255,9 +247,8 @@ You can read more about these projects in our grant announcements from
 
 ### Nostr: The Nostr Fund
 
-The Nostr Fund continued to support projects across the protocol's expanding
-scope. Client development remained important, but 2025 saw significant growth
-in infrastructure, tooling, and novel use cases.
+The Nostr Fund kept growing. We funded clients, but also infrastructure,
+tooling, and some weird stuff nobody expected.
 
 ![](/static/images/blog/2024-eoy/nostr-distribution.png)
 
@@ -312,9 +303,8 @@ You can read more about these projects in our grant announcements from
 
 ## Grantees
 
-Throughout 2025, we maintained a pace of roughly a dozen new grants per month.
-This steady growth reflects both continued donor support and a healthy pipeline
-of applications from developers worldwide.
+Throughout 2025, we gave roughly a dozen new grants per month. Donors kept
+donating, and developers kept applying.
 
 In total, we have now given over 350 grants since launching our grant program in
 2023. The 2025 additions include approximately 140 new grants across bitcoin,
@@ -322,8 +312,8 @@ nostr, education, and ecosystem-building initiatives.
 
 ![](/static/images/blog/2024-eoy/grantees.png)
 
-As of December 2025, we are sending approximately \$1.2M worth of bitcoin to
-our grantees each month. Thanks to bitcoin and Lightning, we can do this with
+As of December 2025, we are sending over \$1 million worth of bitcoin to our
+grantees each month. Thanks to bitcoin and Lightning, we can do this with
 minimal overhead and near-instant settlement—regardless of where our grantees
 are located. Our grantees span over 40 countries:
 
@@ -331,12 +321,9 @@ are located. Our grantees span over 40 countries:
 
 <StatsSentence className="text-xl leading-8 text-gray-500 dark:text-gray-400" />
 
-We continue to prioritize long-term relationships with grantees whose work
-aligns with [our mission](/mission). Many of this year's grants were renewals
-for projects that demonstrated continued progress and impact. As long as
-funding permits and work remains aligned with our goals, we aim to provide the
-stable support that allows developers to focus on building rather than
-fundraising.
+Many of this year's grants were renewals. When grantees do good work and
+funding permits, we keep supporting them. Developers should build, not
+fundraise.
 
 ---
 
@@ -355,7 +342,7 @@ platforms while preserving user control. The integration between nostr, bitcoin,
 and ecash creates new possibilities for value transfer and identity that
 didn't exist a year ago.
 
-Looking ahead, we see several areas that will benefit from continued support:
+What needs funding in 2026?
 
 **Protocol research and implementation.** Projects like LNHANCE are exploring
 covenant constructions that could enable new types of channels and vaults.
