docs: add Francis Pouliot quote to Impact section

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -160,6 +160,11 @@ V2 (BIP 77) went from specification to production. Bull Bitcoin Mobile shipped
 async payjoin in December 2024. Cake Wallet followed. Coinswap hit beta. Silent
 Payments integration moved forward across Bitcoin Core and third-party wallets.
 
+> Without the OpenSats grant awarded to Payjoin Dev Kit, Payjoin V2 may never
+> have come to exist and would have remained an idea in the mind of cypherpunks.
+>
+> <cite>—Francis Pouliot, CEO of Bull Bitcoin</cite>
+
 **[Lightning infrastructure](/blog/advancements-in-lightning-infrastructure).**
 Splicing now works between Core Lightning and Eclair. Validating Lightning
 Signer powers Greenlight, which runs Breez and Relai. BLAST can test all three
