docs: add 2025 financial stats and grant breakdown

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -8,11 +8,12 @@ images: ['/static/images/blog/66-opensats-2024-year-in-review.jpg']
 summary: '365 days. Two funds. 350+ grants. Billions of sats.'
 ---
 
-Twenty-twenty-five. The momentum continues. Over the past year, we have given
-more grants, published our first impact reports, and onboarded more long-term support
-grantees than ever before. We want to take the opportunity to pause, reflect,
-and share our year in review—looking back at announcements, donations, fund
-allocation, and grantee growth—before providing an outlook for the year ahead.
+Twenty-twenty-five. The momentum continues. Over the past year, we allocated
+\$11,088,677 to 229 grants—up 21% from \$9,167,491 in 2024. We published our
+first impact reports and onboarded more long-term support grantees than ever
+before. We want to take the opportunity to pause, reflect, and share our year in
+review—looking back at announcements, donations, fund allocation, and grantee
+growth—before providing an outlook for the year ahead.
 
 - [Announcements](#announcements)
 - [Donations](#donations)
@@ -181,8 +182,11 @@ supports bitcoin-related projects and other free and open-source work that
 helps bitcoin flourish, while [The Nostr Fund](/funds/nostr) focuses
 specifically on the nostr ecosystem.
 
-As of December 2025, we have allocated over \$18M in grants from the General
-Fund and over \$11M from The Nostr Fund across the lifetime of both programs.
+In 2025, the General Fund allocated \$7,878,735—up 43% from 2024. The Nostr Fund
+allocated \$3,209,942, down 12% from the prior year as we worked through a
+larger pipeline of bitcoin-centric projects. Across the lifetime of both
+programs, we have now allocated over \$18M from the General Fund and over \$11M
+from The Nostr Fund.
 
 ![](/static/images/blog/2024-eoy/allocation.png)
 
@@ -310,12 +314,11 @@ You can read more about these projects in our grant announcements from
 
 ## Grantees
 
-Throughout 2025, we gave roughly a dozen new grants per month. Donors kept
-donating, and developers kept applying.
-
-In total, we have now given over 350 grants since launching our grant program in
-2023. The 2025 additions include approximately 140 new grants across bitcoin,
-nostr, education, and ecosystem-building initiatives.
+In 2025 we issued 229 grants: 116 new and 113 continuing. That compares to 215
+grants in 2024—steady growth of 6.5% year-over-year. Our long-term support
+program accounted for \$3,993,949 (up 77% from 2024), while regular grants
+totaled \$7,094,729 (up 3%). In total, we have now given over 350 grants since
+launching our grant program in 2023.
 
 ![](/static/images/blog/2024-eoy/grantees.png)
 
