docs: tighten stats wording, remove corporate jargon

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -182,11 +182,10 @@ supports bitcoin-related projects and other free and open-source work that
 helps bitcoin flourish, while [The Nostr Fund](/funds/nostr) focuses
 specifically on the nostr ecosystem.
 
-In 2025, the General Fund allocated \$7,878,735—up 43% from 2024. The Nostr Fund
-allocated \$3,209,942, down 12% from the prior year as we worked through a
-larger pipeline of bitcoin-centric projects. Across the lifetime of both
-programs, we have now allocated over \$18M from the General Fund and over \$11M
-from The Nostr Fund.
+In 2025, the General Fund allocated \$7,878,735 (up 43% from 2024) and The Nostr
+Fund allocated \$3,209,942 (down 12%). Across the lifetime of both programs, we
+have now sent over \$18M from the General Fund and over \$11M from The Nostr
+Fund.
 
 ![](/static/images/blog/2024-eoy/allocation.png)
 
@@ -314,11 +313,10 @@ You can read more about these projects in our grant announcements from
 
 ## Grantees
 
-In 2025 we issued 229 grants: 116 new and 113 continuing. That compares to 215
-grants in 2024—steady growth of 6.5% year-over-year. Our long-term support
-program accounted for \$3,993,949 (up 77% from 2024), while regular grants
-totaled \$7,094,729 (up 3%). In total, we have now given over 350 grants since
-launching our grant program in 2023.
+We issued 229 grants in 2025: 116 new and 113 continuing. Long-term support
+grants totaled \$3,993,949 (up 77% from 2024); regular grants came to
+\$7,094,729 (up 3%). In total, we have now given over 350 grants since launching
+our grant program in 2023.
 
 ![](/static/images/blog/2024-eoy/grantees.png)
 
