docs: make recurring donations graphic clickable

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -139,7 +139,7 @@ The ratio of Lightning to on-chain payments remained steady at approximately
 Fund](/funds/general), with the remainder split between [The Nostr
 Fund](/funds/nostr) and our [Operations Budget](/funds/ops).
 
-![](/static/images/blog/2025-eoy/2025-recurring-donations.png)
+[![](/static/images/blog/2025-eoy/2025-recurring-donations.png)](https://adtjkuks.donorsupport.co/page/opensats)
 
 <center>
   <DonateRecurringButton />
