Fix links and repository information (Lightning Detective)
- Updated links and repository references.
- Remove horizontal line between each project description.

--- a/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/fourteenth-wave-of-bitcoin-grants.mdx
@@ -77,8 +77,6 @@ License: MIT
 [ollama]: https://docs.ollama.com/
 [cln]: https://github.com/ElementsProject/lightning?tab=readme-ov-file#readme
 
----
-
 ### Floresta
 
 Floresta is a modular and lightweight Bitcoin full node written in Rust that
@@ -112,8 +110,6 @@ License: MIT
 [nixpkgs]: https://github.com/NixOS/nixpkgs
 [nixos]: https://nixos.org/
 
----
-
 ### Alt Signetfaucet
 
 [Alt Signetfaucet][alt-signetfaucet] is a Bitcoin faucet for the Signet test
@@ -144,8 +140,6 @@ License: MIT
 [signet]: https://bitcoinops.org/en/topics/signet/
 [faucet-repo]: https://github.com/jsarenik/bitcoin-faucet-shell
 
----
-
 ### Lightning Detective
 
 Lightning Detective is a Rust library and web service that analyzes Lightning
@@ -156,7 +150,7 @@ non-custodial wallet, or another type of provider. The tool can match well-known
 public nodes directly, for example, by identifying custodial wallets like Wallet
 of Satoshi, and can also detect wallets that rely on Lightning Service Providers
 ([LSPs][lsps]), such as Phoenix, through ACINQ's infrastructure. A public demo
-is available at [detective.lipa.dev][detective].
+is available at [lndetective.dev][detective].
 
 With support from OpenSats, the project will expand its coverage and improve
 usability. Planned work includes detecting the target network, adding support
@@ -167,16 +161,14 @@ developers to integrate into applications, while ensuring researchers and users
 have clearer insight into payment flows and wallet usage patterns across the
 Lightning Network.
 
-Repository: [getlipa/invoice-detective][repo]  
+Repository: [andrei-21/lightning-detective][repo]  
 License: MIT
 
 [bolt-11]: https://github.com/lightning/bolts/blob/master/11-payment-encoding.md
 [lsps]: https://docs.lightning.engineering/the-lightning-network/liquidity/lightning-service-provider
-[detective]: https://detective.lipa.dev/
+[detective]: https://lndetective.dev/
 [lnurl-pay]: https://github.com/lnurl/luds/blob/luds/06.md
-[repo]: https://github.com/getlipa/invoice-detective
-
----
+[repo]: https://github.com/andrei-21/lightning-detective
 
 From new tools for testing and education, to infrastructure that improves
 payments and node operation, this wave of grants reflects the broad range of
