Add quote to Brad Stachurski's LTS announcement

--- a/data/blog/brad-stachurski-receives-lts.mdx
+++ b/data/blog/brad-stachurski-receives-lts.mdx
@@ -29,6 +29,13 @@ responsibilities, including:
 - Improve deployment tooling, including packaging and self-hosted setups.
 - Maintain [ecash-app] and use it as a test client in the release workflow.
 
+> I love the behind-the-scenes work of making sure complex financial systems run
+> reliably in production. I'm grateful for the long-term support that lets me
+> stay focused on making Fedimint easier to operate and trustworthy for
+> communities adopting it.
+>
+> <cite>—Brad Stachurski</cite>
+
 OpenSats' [mission] is to provide sustainable funding for the builders and maintainers
 of critical open-source infrastructure within the Bitcoin ecosystem.
 
