--- a/data/authors/btcschellingpt.mdx
+++ b/data/authors/btcschellingpt.mdx
@@ -2,8 +2,8 @@
 name: Tim
 nym: btcschellingpt
 avatar: /static/images/board/btcschellingpt.jpg
-occupation: Board Member
-company: OpenSats
+occupation: Founder
+company: Escape Hatch
 email: btcschellingpt@opensats.org
 nostr: npub1nvfgglea9zlcs58tcqlc6j26rt50ngkgdk7699wfq4txrx37aqcsz4e7zd
 github: https://github.com/btcschellingpt
