--- a/data/authors/btcschellingpt.mdx
+++ b/data/authors/btcschellingpt.mdx
@@ -1,13 +1,13 @@
 ---
 name: Tim
 nym: btcschellingpt
-avatar: /static/images/volunteers/btcschellingpt.jpg
-occupation: Volunteer
-company: OpenSats
+avatar: /static/images/board/btcschellingpt.jpg
+occupation: Founder
+company: Escape Hatch
 email: btcschellingpt@opensats.org
 nostr: npub1nvfgglea9zlcs58tcqlc6j26rt50ngkgdk7699wfq4txrx37aqcsz4e7zd
 github: https://github.com/btcschellingpt
-volunteer: true
+board: true
 ---
 
 Tim is an Australian bitcoiner with decades of prior expertise in monolithic legacy
