Fix dollar sign formatting issue

--- a/data/blog/opensats-receives-funding-from-the-human-rights-foundation.mdx
+++ b/data/blog/opensats-receives-funding-from-the-human-rights-foundation.mdx
@@ -8,8 +8,8 @@ draft: false
 summary: "OpenSats secures a $116,000 grant from HRF’s Bitcoin Development Fund for our Operations Budget."
 ---
 
-OpenSats has received a $116,000 grant from the Human Rights Foundation's
-[Bitcoin Development Fund] for our Operations Budget, following [a $250,000
+OpenSats has received a \$116,000 grant from the Human Rights Foundation's
+[Bitcoin Development Fund] for our Operations Budget, following [a \$250,000
 grant last year]. This grant was part of HRF's Q4 2025 [donation round], which
 distributed 1.3 billion satoshis in funding to 22 freedom tech projects
 worldwide.
@@ -53,7 +53,7 @@ behind our grantmaking and enables us to keep channeling resources to builders
 advancing open, censorship-resistant technology
 
 [Bitcoin Development Fund]: https://hrf.org/program/financial-freedom/bitcoin-development-fund/
-[a $250,000 grant last year]: https://opensats.org/blog/additional-ops-budget-from-hrf
+[a \$250,000 grant last year]: https://opensats.org/blog/additional-ops-budget-from-hrf
 [donation round]: https://bitcoinmagazine.com/news/human-rights-foundation-1-3b-satoshis
 [Human Rights Foundation]: https://hrf.org/
 [grantmaking process]: /selection
