FAQ: Add donation methods
Added a new section on how to donate to OpenSats, detailing various donation methods including recurring donations, one-time donations, and options for nostr users.

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -10,6 +10,7 @@ Frequently asked questions:
 - [What are you doing at OpenSats?](#what-are-you-doing-at-opensats)
 - [How are funds distributed?](#how-are-funds-distributed)
 - [How much of my donation goes towards open-source contributors?](#how-much-of-my-donation-goes-towards-open-source-contributors)
+- [How can I donate to OpenSats?](#how-can-i-donate-to-opensats)
 - [Do you distribute grants in bitcoin or fiat?](#do-you-distribute-grants-in-bitcoin-or-fiat)
 - [How do you collect bitcoin donations?](#how-do-you-collect-bitcoin-donations)
 - [How can I communicate with you?](#how-can-i-communicate-with-you)
@@ -58,6 +59,24 @@ regardless of payment method.
 Please [reach out] if you want to help us cover these costs.
 
 [reach out]: mailto:support@opensats.org
+
+## How can I donate to OpenSats?
+
+You can donate to OpenSats in several ways:
+
+- Set up a recurring donation to one or more of our funds at
+  [opensats.org/monthly]
+- Make a one-time bitcoin or fiat donation at [opensats.org/donate], where
+  you’ll also find details on giving via wire transfer or Donor-Advised Fund
+  (DAF).
+- For nostr users, set `opensats@vlt.ge` as your lightning address in your
+  profile so that any Zaps you receive are directed to OpenSats.
+- For Podcasting 2.0, add the [OpenSats Lightning node] as one of your
+  streaming-sats targets.
+
+[opensats.org/monthly]: https://adtjkuks.donorsupport.co/page/opensats
+[opensats.org/donate]: /donate
+[OpenSats Lightning node]: https://terminal.lightning.engineering/explore/037c862ec724bc85462aaeb804dd0941cd77dc4521cabd05edf3d0f23ed6b01f09
 
 ## Do you distribute grants in bitcoin or fiat?
 
