Fix wording in donation section of FAQ

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -62,7 +62,7 @@ Please [reach out] if you want to help us cover these costs.
 
 ## How can I donate to OpenSats?
 
-You can donate to OpenSats in several ways:
+You can donate in several ways:
 
 - Set up a recurring donation to one or more of our funds at
   [opensats.org/monthly]
