Clarify lightning address instruction for nostr users

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -69,7 +69,7 @@ You can donate in several ways:
 - Make a one-time bitcoin or fiat donation at [opensats.org/donate], where
   you’ll also find details on giving via wire transfer or Donor-Advised Fund
   (DAF).
-- For nostr users, set `opensats@vlt.ge` as your lightning address in your
+- For nostr users, set `opensats@vlt.ge` as the lightning address in your
   profile so that any Zaps you receive are directed to OpenSats.
 - For Podcasting 2.0, add the [OpenSats Lightning node] as one of your
   streaming-sats targets.
