Edit to correct punctuation

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -65,7 +65,7 @@ Please [reach out] if you want to help us cover these costs.
 You can donate in several ways:
 
 - Set up a recurring donation to one or more of our funds at
-  [opensats.org/monthly]
+  [opensats.org/monthly].
 - Make a one-time bitcoin or fiat donation at [opensats.org/donate], where
   you’ll also find details on giving via wire transfer or Donor-Advised Fund
   (DAF).
