docs: link grant agreement to transparency page section

--- a/data/pages/selection.mdx
+++ b/data/pages/selection.mdx
@@ -114,8 +114,8 @@ approval by our board of directors.
 
 ### Step 5: Grant Agreement and Monitoring
 
-Once we have made a final decision, we work with grantees to develop a grant
-agreement outlining the grant's scope, milestones, and reporting requirements.
+Once we have made a final decision, we work with grantees to develop a [grant
+agreement](/transparency#grant-selection--agreement) outlining the grant's scope, milestones, and reporting requirements.
 We monitor progress closely to ensure that the grant is achieving the intended
 outcomes and that the grantee is using the funds responsibly.
 
