blog: reorder HRF post authors

--- a/data/blog/opensats-receives-funding-from-the-human-rights-foundation.mdx
+++ b/data/blog/opensats-receives-funding-from-the-human-rights-foundation.mdx
@@ -2,7 +2,7 @@
 title: "OpenSats Receives Funding from the Human Rights Foundation"
 date: '2026-01-16'
 tags: ['OpenSats', 'funding', 'donations', 'operations']
-authors: ['default', 'dergigi', 'robos', 'arvin', 'lucas']
+authors: ['default', 'dergigi', 'arvin', 'robos', 'lucas']
 images: ['/static/images/blog/97-opensats-receives-funding-from-the-human-rights-foundation.jpg']
 draft: false
 summary: "OpenSats secures a $116,000 grant from HRF’s Bitcoin Development Fund for our Operations Budget."
