blog: update gratitude statement in HRF post

--- a/data/blog/opensats-receives-funding-from-the-human-rights-foundation.mdx
+++ b/data/blog/opensats-receives-funding-from-the-human-rights-foundation.mdx
@@ -45,8 +45,8 @@ runway, strengthens the reliability of our support for contributors across
 Bitcoin and nostr, and allows us to maintain longer-term commitments where they
 are most needed.
 
-We are grateful to the Human Rights Foundation for their trust and alignment
-with [our mission]. If you share our commitment to fostering open-source
+We are grateful to the Human Rights Foundation for their trust and continued
+support. If you share our commitment to fostering open-source
 development in the Bitcoin ecosystem, please consider making a recurring
 donation to our [Operations Budget]. Your support strengthens the infrastructure
 behind our grantmaking and enables us to keep channeling resources to builders
