blog: fix missing period in HRF post

--- a/data/blog/opensats-receives-funding-from-the-human-rights-foundation.mdx
+++ b/data/blog/opensats-receives-funding-from-the-human-rights-foundation.mdx
@@ -50,7 +50,7 @@ support. If you share our commitment to fostering open-source
 development in the Bitcoin ecosystem, please consider making a recurring
 donation to our [Operations Budget]. Your support strengthens the infrastructure
 behind our grantmaking and enables us to keep channeling resources to builders
-advancing open, censorship-resistant technology
+advancing open, censorship-resistant technology.
 
 [Bitcoin Development Fund]: https://hrf.org/program/financial-freedom/bitcoin-development-fund/
 [a \$250,000 grant last year]: https://opensats.org/blog/additional-ops-budget-from-hrf
